Fix checkbox to properly fallback on IE8, CSS tweaks

--- a/src/css.css
+++ b/src/css.css
@@ -86,6 +86,7 @@ li {
 #title {
     font-weight: 800;
     color: #fff;
+    text-shadow:1px 1px 0 #777;
     opacity: .6;
     transition: all .2s linear;
 }
@@ -387,9 +388,21 @@ footer a:hover {
 }
 /* ===================== Login Form ===================== */
 
+#title-login {
+    position: absolute;
+    font-weight: 800;
+    font-size: 2.25em;
+    text-align: center;
+    width: 100%;
+    margin-top: 10px;
+    text-shadow:1px 1px 0 #777;
+    color: #fff;
+    transition: all .2s linear;
+}
+
+
 #login-form {
     position: absolute;
-    text-align: center;
     box-shadow: 1px 1px 25px 5px rgba(122,122,122,0.8);
     height: 250px;
     width: 400px;
@@ -406,28 +419,17 @@ footer a:hover {
 #login-form-inner {
     vertical-align: middle;
     position: absolute;
-    height: 150px;
+    height: 100px;
     width: 300px;
-    margin-top: -110px;
-    margin-left: -150px;
-    left: 50%;
-    top: 50%;
-}
-
-#login-text {
-    color: #ddd;
-    display:block;
-    width: 100%;
-    text-align: left;
-    font-size: 1.5em;
+    margin-top: 50px;
+    margin-left: 50px;
 }
 
 .login-input {
     box-shadow: inset 1px 1px 5px 1px rgba(143,143,143,0.8);
     color: #222;
-    margin-top: 5px;
-    margin-bottom: 5px;
-    padding: 0 5px;
+    margin-top: 20px;
+    padding-left: 5px;
     font-size: 1.25em;
     height: 1.5em;
     width: 100%;
@@ -436,10 +438,36 @@ footer a:hover {
 }
 
 #login-container{
-    text-align: center;
     width: 100%;
     height: 100%;
 }
+
+
+input[type=checkbox] {
+    vertical-align: middle;
+}
+
+input[type=checkbox] + label {
+    cursor: pointer;
+    user-select: none;
+    line-height: 19px;
+}
+
+input[type=checkbox] + label:before {
+    content: "";
+    display: inline-block;
+    height: 19px;
+    vertical-align: middle;
+    width: 19px;
+    background: url(/res/chk.png)left top no-repeat;
+    margin-right: 4px;
+    margin-left: -19px;
+}
+
+input[type=checkbox]:checked + label:before {
+    background: url(/res/chk.png)-19px top no-repeat;
+}
+
 
 #submit-bg {
     width: 100%;
@@ -484,32 +512,6 @@ footer a:hover {
     text-align: left;
 }
 
-#check { display:none; }
-
-#check + #checklabel {
-    display:inline-block;
-    padding-left:20px;
-    height:20px;
-    line-height:20px;
-    background-repeat:no-repeat;
-    background-position: 0 0;
-    -ms-background-position-x : 0px;
-    -ms-background-position-y : 0px;
-
-    vertical-align:middle;
-    cursor:pointer;
-}
-
-#check:checked + #checklabel {
-    background-position: 0 -20px;
-    -ms-background-position-x: 1px;
-    -ms-background-position-y: -20px;
-}
-
-#checklabel{
-    background-image: url(/res/chk.png);
-    user-select: none;
-}
 /* ===================== Breadcrumbs ===================== */
 #current {
     z-index: 100;
